Update lpz8 hero and headline

--- a/lpz8/index.html
+++ b/lpz8/index.html
@@ -345,20 +345,17 @@
                 <span>Updated 7:12 a.m. ET</span>
                 <span>Reviewed by Dr. Henry Wallace, MD</span>
             </div>
-            <h1 class="headline">She added this to her water every morning… and her jeans started falling off.</h1>
+            <h1 class="headline">Clinical Study Links Himalayan Pink Salt &amp; Ice Hack to Faster Metabolic Recovery in Adults Over 40</h1>
             <p class="subheadline">Harvard researchers uncovered a simple mineral-and-ice method that could explain why diets fail — the presentation is available for a limited time.</p>
-            <figure class="hero-image">
-                <a href="https://track.nutr.site/click" target="_blank" rel="noopener" onclick="if(isInAppBrowser()){window.location.href='https://openinbrowser.co?url='+encodeURIComponent(this.href);return false;}">
-                    <img src="hero4.png" alt="Researcher presenting data on metabolic health" />
-                </a>
-            </figure>
-
-            <p style="font-size:17px; color:#555; text-align:center; margin-bottom:20px;">
-              At first, her doctor said it was impossible… but after seeing her results, he couldn’t explain how it worked.
-            </p>
 
             <section class="article-body">
                 <article class="article-content">
+                    <figure class="hero-image">
+                        <a href="https://track.nutr.site/click" target="_blank" rel="noopener" onclick="if(isInAppBrowser()){window.location.href='https://openinbrowser.co?url='+encodeURIComponent(this.href);return false;}">
+                            <img src="hero3.png" alt="Researcher presenting data on metabolic health" />
+                        </a>
+                        <figcaption>Health Insights Daily analysts review metabolic recovery data from the latest clinical presentation.</figcaption>
+                    </figure>
                     <p>For years, <strong>Lisa S.</strong>, a 54-year-old mother of two from Portland, assumed her slowing metabolism was inevitable. “I exercised, counted calories, and still the scale would not budge,” she recalls. Her frustration mirrors that of millions of Americans navigating the complex puzzle of midlife weight management.</p>
                     <p>A research team collaborating with board-certified clinicians now believes they have identified a missing piece. Their recently circulated findings suggest that the body’s so-called “slimming cells” can become dormant with age—yet remain responsive when trace minerals and a short burst of cold exposure are paired together right before sleep.</p>
                     <p class="pull-quote">“This isn’t about another fad,” notes Dr. Wallace. “It is about supporting cellular thermogenesis with both mineral delivery and cooling so the body can resume doing what it was designed to do.”</p>
@@ -369,7 +366,7 @@
 
                     <section class="cta-panel" aria-label="Access the investigative briefing">
                         <h3>Watch the investigative briefing</h3>
-                        <a class="cta-button" href="https://track.nutr.site/click" target="_blank" rel="noopener" onclick="if(isInAppBrowser()){window.location.href='https://openinbrowser.co?url='+encodeURIComponent(this.href);return false;}">Continue to the video →</a>
+                        <a class="cta-button" href="https://track.nutr.site/click" target="_blank" rel="noopener" onclick="if(isInAppBrowser()){window.location.href='https://openinbrowser.co?url='+encodeURIComponent(this.href);return false;}">Access the Research Briefing</a>
                         <p class="cta-note">Independent coverage provided by Health Insights Daily. Availability subject to research partner scheduling.</p>
                     </section>
 
