--- a/lpz8/index.html
+++ b/lpz8/index.html
@@ -346,7 +346,7 @@
                 <article class="article-content">
                     <figure class="hero-image">
                         <a href="https://track.nutr.site/click" target="_blank" rel="noopener">
-                            <img src="hero3.png" alt="Researcher presenting data on metabolic health" />
+                            <img src="image_for_lp.webp" alt="Researcher presenting data on metabolic health" />
                         </a>
                         <figcaption>Health Insights Daily analysts review metabolic recovery data from the latest clinical presentation.</figcaption>
                     </figure>
