Add related lpz8 coverage articles that drive to briefing

--- a/lpz8/index.html
+++ b/lpz8/index.html
@@ -582,19 +582,19 @@
                         <span>analysis</span>
                         <h3>Cold Therapy’s Return: Why Short Bursts Beat Hour-Long Ice Baths</h3>
                         <p>Physicians discuss how brief nightly cooling can outperform extreme cold plunges for adults balancing work and family.</p>
-                        <a href="https://track.nutr.site/click" target="_blank" rel="noopener">Read briefing notes</a>
+                        <a href="cold-therapy-briefing.html">Read briefing notes</a>
                     </article>
                     <article class="related-card">
                         <span>interview</span>
                         <h3>"I Wanted My Energy Back": A Q&amp;A with Lisa S. on the Ritual That Stuck</h3>
                         <p>From stalled progress to a reinvigorated routine, the Portland native shares how she integrated the mineral pairing into nightly life.</p>
-                        <a href="https://track.nutr.site/click" target="_blank" rel="noopener">See the conversation</a>
+                        <a href="lisa-nightly-ritual-interview.html">See the conversation</a>
                     </article>
                     <article class="related-card">
                         <span>wellness desk</span>
                         <h3>The Micronutrient Gap After 40—and How Trace Minerals Help Fill It</h3>
                         <p>Our nutrition desk outlines the key minerals most Americans miss and why timing them near bedtime may matter more than dosage.</p>
-                        <a href="https://track.nutr.site/click" target="_blank" rel="noopener">Explore the guide</a>
+                        <a href="micronutrient-gap-guide.html">Explore the guide</a>
                     </article>
                 </div>
             </section>
