--- a/lpz8/micronutrient-gap-guide.html
+++ b/lpz8/micronutrient-gap-guide.html
@@ -158,6 +158,53 @@
         .breadcrumb span {
             margin: 0 6px;
         }
+
+        @media (max-width: 780px) {
+            .page {
+                padding: 20px 18px 48px;
+            }
+
+            .newsbar {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 6px;
+                text-align: left;
+            }
+
+            .masthead {
+                padding: 24px 22px;
+            }
+
+            .article {
+                padding: 30px 26px;
+            }
+        }
+
+        @media (max-width: 540px) {
+            .page {
+                padding: 16px 14px 40px;
+            }
+
+            .newsbar {
+                align-items: center;
+                text-align: center;
+                font-size: 10px;
+                letter-spacing: 0.14em;
+            }
+
+            .masthead p {
+                letter-spacing: 0.2em;
+                font-size: 11px;
+            }
+
+            .article {
+                padding: 26px 20px;
+            }
+
+            .cta-button {
+                width: 100%;
+            }
+        }
     </style>
 </head>
 <body>
