--- a/gutlp1/index.html
+++ b/gutlp1/index.html
@@ -2,25 +2,171 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Gut Health Quiz Landing Page</title>
+<title>Gut Health Qualification Quiz | Harvard-Backed Discovery</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<meta name="description" content="Answer a few quick questions to see if you qualify to watch the restricted gut health video presentation.">
-<meta property="og:title" content="Gut Health Quiz Landing Page">
-<meta property="og:description" content="Answer a few quick questions to see if you qualify to watch the restricted gut health video presentation.">
+<meta name="description" content="Answer quick gut health questions to see if you qualify to watch the Harvard-backed warm water gut protocol video.">
+<link rel="icon" href="/path-to-your-favicon.ico">
+<meta property="og:title" content="Gut Health Qualification Quiz | Harvard-Backed Discovery">
+<meta property="og:description" content="Find out if your digestion type qualifies to see the Harvard-backed warm water gut protocol presentation.">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://example.com/gutlp1">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-<style>body{margin:0;font-family:'Inter',sans-serif;background:linear-gradient(135deg,#f7f9fc,#e8eff7);color:#1f2937;display:flex;min-height:100vh;align-items:center;justify-content:center;padding:24px}*,*:before,*:after{box-sizing:border-box}.quiz{width:100%;max-width:480px;background:#fff;border-radius:18px;padding:32px 28px 40px;box-shadow:0 25px 60px rgba(59,130,246,.12);text-align:center}.progress{height:8px;background:#dbeafe;border-radius:999px;overflow:hidden;margin-bottom:28px}.progress-bar{height:100%;width:0;background:#3b82f6;transition:width .4s ease}.headline{font-size:1.5rem;line-height:1.3;margin:0 0 12px}.subheadline{font-size:1rem;margin:0 0 28px;color:#475569}.step{display:none;animation:fade .35s ease}.step.active{display:block}.question{font-size:1.125rem;font-weight:600;margin-bottom:20px;color:#111827}.options{display:grid;gap:12px}.option{border:1px solid #cbd5f5;padding:14px 16px;border-radius:12px;font-weight:500;background:#f8fbff;cursor:pointer;transition:transform .2s,box-shadow .2s,border .2s}.option:hover{transform:translateY(-1px);box-shadow:0 8px 18px rgba(15,23,42,.08)}.option.selected{border-color:#3b82f6;background:#eff6ff;box-shadow:0 8px 20px rgba(59,130,246,.18)}.microcopy{font-size:.85rem;color:#64748b;margin-top:18px}.btn{display:inline-flex;align-items:center;justify-content:center;width:100%;padding:16px 20px;margin-top:28px;border:none;border-radius:14px;background:#3b82f6;color:#fff;font-weight:600;cursor:pointer;box-shadow:0 20px 30px -12px rgba(59,130,246,.5);transition:transform .2s ease,box-shadow .2s ease;text-decoration:none}.btn:hover{transform:translateY(-1px);box-shadow:0 28px 32px -16px rgba(59,130,246,.4)}.loading{display:flex;flex-direction:column;align-items:center;gap:18px}.spinner{width:54px;height:54px;border-radius:50%;border:6px solid #dbeafe;border-top-color:#3b82f6;animation:spin 1s linear infinite}@keyframes spin{to{transform:rotate(360deg)}}@keyframes fade{from{opacity:0;transform:translateY(6px)}to{opacity:1;transform:translateY(0)}}@media(max-width:480px){.quiz{padding:28px 22px 34px;border-radius:16px}.headline{font-size:1.35rem}.question{font-size:1.05rem}}</style>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+<style>
+  :root{color-scheme:only light;--accent:#4a8f78;--card:#f7f9f8;--cta-start:#ff7a00;--cta-end:#ff5500;--text:#1d2b27}
+  *{box-sizing:border-box;margin:0;padding:0}
+  body{font-family:'Poppins',sans-serif;background:linear-gradient(135deg,#f1f6f4,#e7f0ec);color:var(--text);display:flex;min-height:100vh;align-items:center;justify-content:center;padding:24px}
+  .wrapper{width:100%;max-width:520px}
+  .card{background:var(--card);border-radius:28px;box-shadow:0 24px 50px -24px rgba(24,57,46,.35);padding:36px 28px 40px;display:flex;flex-direction:column;gap:24px;position:relative}
+  .logo{width:72px;height:72px;border-radius:50%;border:2px dashed rgba(74,143,120,.4);display:flex;align-items:center;justify-content:center;margin:0 auto;font-weight:600;color:var(--accent);letter-spacing:.04em;text-transform:uppercase}
+  .progress{height:10px;background:rgba(74,143,120,.15);border-radius:999px;overflow:hidden}
+  .progress-bar{height:100%;width:0;background:var(--accent);transition:width .4s ease}
+  .screen{display:none;flex-direction:column;gap:20px;text-align:center;animation:fade .35s ease}
+  .screen.active{display:flex}
+  h1{font-size:1.7rem;line-height:1.25;font-weight:700}
+  .subhead{font-size:1rem;color:rgba(29,43,39,.7);line-height:1.6}
+  .cta{display:inline-flex;align-items:center;justify-content:center;gap:8px;padding:16px 22px;border-radius:999px;border:none;background:linear-gradient(135deg,var(--cta-start),var(--cta-end));color:#fff;font-weight:600;letter-spacing:.02em;text-decoration:none;box-shadow:0 18px 28px -18px rgba(255,85,0,.65);cursor:pointer;transition:transform .2s ease,box-shadow .2s ease}
+  .cta:hover{transform:translateY(-1px);box-shadow:0 24px 34px -18px rgba(255,85,0,.6)}
+  .skip{font-size:.9rem;color:rgba(29,43,39,.55);text-decoration:underline;text-underline-offset:4px;display:inline-block}
+  .question{font-size:1.35rem;font-weight:600;line-height:1.35}
+  .choices{display:grid;gap:16px;margin-top:4px}
+  .choice{border:none;border-radius:999px;padding:15px 18px;background:#fff;color:var(--text);font-weight:500;cursor:pointer;box-shadow:0 1px 4px rgba(0,0,0,.05);transition:transform .2s ease,box-shadow .2s ease,background .2s ease}
+  .choice:hover{transform:translateY(-1px);box-shadow:0 12px 22px -14px rgba(74,143,120,.7)}
+  .choice.selected{background:rgba(74,143,120,.14);box-shadow:0 16px 30px -18px rgba(74,143,120,.6)}
+  .microcopy{font-size:.85rem;color:rgba(29,43,39,.6)}
+  .loading{display:flex;flex-direction:column;align-items:center;gap:18px}
+  .spinner{width:62px;height:62px;border-radius:50%;border:6px solid rgba(74,143,120,.18);border-top-color:var(--accent);animation:spin 1s linear infinite}
+  .results-text{font-size:1rem;line-height:1.65;color:rgba(29,43,39,.78)}
+  .subtext{font-size:.9rem;color:rgba(29,43,39,.6)}
+  @keyframes spin{to{transform:rotate(360deg)}}
+  @keyframes fade{from{opacity:0;transform:translateY(8px)}to{opacity:1;transform:translateY(0)}}
+  @media(max-width:520px){
+    body{padding:18px}
+    .card{padding:30px 22px 34px;border-radius:24px}
+    h1{font-size:1.55rem}
+    .question{font-size:1.25rem}
+  }
+</style>
 </head>
 <body>
-<main class="quiz" role="main">
-<div class="progress" aria-hidden="true"><div class="progress-bar" id="progressBar"></div></div>
-<h1 class="headline">Answer a few quick questions to see if you qualify to watch the restricted video.</h1>
-<p class="subheadline">This short quiz determines if your symptoms match the new Harvard-backed gut discovery.</p>
-<section id="steps"></section>
-</main>
-<script>const quizData=[{question:"How often do you feel bloated or constipated?",options:["Rarely","A few times a month","Several times a week","Almost every day"]},{question:"How long have you been dealing with digestive discomfort?",options:["Less than 3 months","3-12 months","1-3 years","More than 3 years"]},{question:"Have you ever tried probiotics or fiber supplements?",options:["Yes, they helped","Yes, but no change","Tried once or twice","Never tried"]},{question:"Do you often feel tired, sluggish, or low in energy?",options:["Hardly ever","Sometimes","Most days","All the time"]},{question:"Do you feel your digestion has worsened with age?",options:["Not really","Somewhat","Definitely","It's rapidly worsening"]},{question:"Are you open to learning about a new natural method proven to help digestion?",options:["Not sure","Maybe","Yes, tell me more","Absolutely"]}];const stepsContainer=document.getElementById("steps"),progressBar=document.getElementById("progressBar");const microcopy="Answer honestly — this takes less than 60 seconds.";function createSteps(){quizData.forEach((step,index)=>{const section=document.createElement("div");section.className="step";section.setAttribute("data-step",index);section.innerHTML=`<div class="question">${step.question}</div><div class="options">${step.options.map((opt,i)=>`<button class="option" data-value="${opt}" data-index="${index}" data-option="${i}">${opt}</button>`).join("")}</div><p class="microcopy">${microcopy}</p>`;stepsContainer.appendChild(section)});const loading=document.createElement("div");loading.className="step";loading.setAttribute("data-step","loading");loading.innerHTML='<div class="loading"><div class="spinner" role="status" aria-label="Calculating"></div><p class="question">Calculating Results...</p><p class="microcopy">Hang tight — we’re matching your answers with the new gut health insights.</p></div>';stepsContainer.appendChild(loading);const results=document.createElement("div");results.className="step";results.setAttribute("data-step","results");results.innerHTML='<div class="question">You Qualify to Watch the Video</div><p class="subheadline" style="margin-bottom:24px;color:#1f2937">Based on your answers, you’re eligible to view the exclusive Harvard-backed warm water protocol video.</p><a class="btn" href="https://your-vsl-url-here.com">Continue to Video</a>';stepsContainer.appendChild(results)}let currentStep=0;function showStep(step){document.querySelectorAll(".step").forEach((el,idx)=>{el.classList.toggle("active",idx===step)});updateProgress(step)}function showLoading(){const loadingIndex=quizData.length;document.querySelectorAll(".step").forEach((el,idx)=>{el.classList.toggle("active",idx===loadingIndex)});progressBar.style.width="100%";setTimeout(()=>{showResults()},3000)}function showResults(){const resultsIndex=quizData.length+1;document.querySelectorAll(".step").forEach((el,idx)=>{el.classList.toggle("active",idx===resultsIndex)})}function updateProgress(step){const percent=Math.min(((step)/quizData.length)*100,100);progressBar.style.width=`${percent}%`}function handleOptionClick(e){const button=e.target.closest(".option");if(!button)return;const step=parseInt(button.getAttribute("data-index"));if(step!==currentStep)return;button.parentElement.querySelectorAll(".option").forEach(opt=>opt.classList.remove("selected"));button.classList.add("selected");setTimeout(()=>{currentStep++;if(currentStep<quizData.length){showStep(currentStep)}else{showLoading()}},450)}createSteps();showStep(currentStep);stepsContainer.addEventListener("click",handleOptionClick);
+<div class="wrapper">
+  <main class="card" role="main" aria-live="polite">
+    <div class="logo" aria-hidden="true">Logo</div>
+    <div class="progress" aria-hidden="true"><div class="progress-bar" id="progressBar"></div></div>
+    <section id="screens"></section>
+  </main>
+</div>
+<script>
+  const introScreen = {
+    id:'intro',
+    template:`<div class="screen active" data-screen="intro">
+        <h1>Do You Qualify to Watch the Harvard-Backed Gut Health Video?</h1>
+        <p class="subhead">Answer these quick questions to see if your digestion type matches this newly discovered warm water protocol.</p>
+        <button class="cta" id="startQuiz" type="button">START QUIZ →</button>
+        <a class="skip" href="https://your-vsl-link-here.com">Skip this step</a>
+      </div>`
+  };
+
+  const quizQuestions = [
+    { q:"How often do you experience bloating or irregularity?", options:["Rarely","A few times per week","Almost every day"] },
+    { q:"How long have you been dealing with digestive discomfort?", options:["Less than 6 months","1–2 years","Over 2 years"] },
+    { q:"Which best describes your daily energy levels?", options:["Consistently high","Fluctuating or sluggish","Constant fatigue"] },
+    { q:"Have you ever tried fiber supplements, probiotics, or detoxes?", options:["Yes – but they didn’t help much","Yes – and they worked","No, I haven’t tried"] },
+    { q:"Would you be open to learning a simple natural method that supports digestion?", options:["Absolutely","Maybe","Not really"] }
+  ];
+
+  const loadingScreen = {
+    id:'loading',
+    template:`<div class="screen" data-screen="loading">
+        <div class="loading">
+          <div class="spinner" role="status" aria-label="Loading"></div>
+          <h2 class="question">Analyzing your answers…</h2>
+          <p class="microcopy">Matching your digestion profile with the Harvard-backed protocol.</p>
+        </div>
+      </div>`
+  };
+
+  const resultsScreen = {
+    id:'results',
+    template:`<div class="screen" data-screen="results">
+        <h1>You Qualify to Watch the Video</h1>
+        <p class="results-text">Based on your answers, your digestion type matches those who benefit most from the 8-second warm water gut protocol. This presentation reveals how a Harvard-backed discovery helps clear buildup and restore gut balance naturally.</p>
+        <a class="cta" href="https://your-vsl-link-here.com">CONTINUE TO VIDEO</a>
+        <p class="subtext">Only available for a limited time — watch while it’s still online.</p>
+      </div>`
+  };
+
+  const screensContainer = document.getElementById('screens');
+  screensContainer.innerHTML = introScreen.template + buildQuestionScreens() + loadingScreen.template + resultsScreen.template;
+
+  const progressBar = document.getElementById('progressBar');
+  const totalQuestions = quizQuestions.length;
+  let currentIndex = -1;
+  const microcopy = 'Answer honestly — this takes less than 60 seconds.';
+
+  function buildQuestionScreens(){
+    return quizQuestions.map((item,idx)=>`<div class="screen" data-screen="q${idx}">
+        <div class="question">${item.q}</div>
+        <div class="choices">
+          ${item.options.map((opt)=>`<button class="choice" type="button" data-question="${idx}">${opt}</button>`).join('')}
+        </div>
+        <p class="microcopy">${microcopy}</p>
+      </div>`).join('');
+  }
+
+  function showScreen(id){
+    document.querySelectorAll('.screen').forEach(screen=>{
+      screen.classList.toggle('active', screen.dataset.screen === id);
+    });
+  }
+
+  function updateProgress(index){
+    const percent = index < 0 ? 0 : ((index + 1) / totalQuestions) * 100;
+    progressBar.style.width = `${percent}%`;
+  }
+
+  function goToQuestion(index){
+    currentIndex = index;
+    showScreen(`q${index}`);
+    updateProgress(index);
+  }
+
+  function startLoading(){
+    showScreen('loading');
+    progressBar.style.width = '100%';
+    setTimeout(()=>{
+      showScreen('results');
+    },3000);
+  }
+
+  screensContainer.addEventListener('click',(event)=>{
+    if(event.target.id === 'startQuiz'){
+      goToQuestion(0);
+      return;
+    }
+
+    if(event.target.classList.contains('choice')){
+      const btn = event.target;
+      const step = Number(btn.dataset.question);
+      if(step !== currentIndex){
+        goToQuestion(step);
+      }
+      btn.parentElement.querySelectorAll('.choice').forEach(choice=>choice.classList.remove('selected'));
+      btn.classList.add('selected');
+      setTimeout(()=>{
+        const nextIndex = step + 1;
+        if(nextIndex < totalQuestions){
+          goToQuestion(nextIndex);
+        }else{
+          startLoading();
+        }
+      },420);
+    }
+  });
+
+  showScreen('intro');
+  updateProgress(-1);
 </script>
 </body>
 </html>
