--- a/lpz8/index.html
+++ b/lpz8/index.html
@@ -137,7 +137,7 @@
             background: var(--accent-red);
         }
 
-        .badge-advertorial {
+        .badge-feature {
             display: inline-flex;
             align-items: center;
             gap: 8px;
@@ -479,7 +479,7 @@
                 gap: 8px;
             }
 
-            .badge-advertorial {
+            .badge-feature {
                 font-size: 11px;
                 letter-spacing: 0.16em;
                 padding: 6px 10px;
@@ -531,7 +531,7 @@
 <body>
     <div class="page">
         <div class="newsbar" role="banner">
-            <span><strong>Breaking</strong> Investigative Advertorial</span>
+            <span><strong>Breaking</strong> Investigative Report</span>
             <span>Presented by Health Insights Daily Investigations Desk</span>
         </div>
         <header class="masthead">
@@ -548,7 +548,7 @@
                 <span>By <strong>Amelia Grant</strong>, Senior Health Correspondent</span>
                 <span>Reviewed by Dr. Henry Wallace, MD</span>
             </div>
-            <div class="badge-advertorial">Special Advertorial Coverage</div>
+            <div class="badge-feature">Special Feature Coverage</div>
             <h1 class="headline">Clinical Study Links Himalayan Pink Salt &amp; Ice Hack to Faster Metabolic Recovery in Adults Over 40</h1>
             <p class="subheadline">Harvard-adjacent researchers uncovered a simple mineral-and-ice ritual that could explain why diets fail — and why a 10-second bedtime habit may help the body self-correct. Access to the full presentation is offered for a limited window.</p>
 
