--- a/lpz7/index.html
+++ b/lpz7/index.html
@@ -4,9 +4,9 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>
-     Alpine Ice Ritual - Lost 47 lbs in 6 Months | Susan Smith's Story
-    </title>
+<title>Health News Daily</title>
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg%20xmlns%3D%27http%3A//www.w3.org/2000/svg%27%20viewBox%3D%270%200%20100%20100%27%3E%3Crect%20fill%3D%27%25230a6ebd%27%20width%3D%27100%27%20height%3D%27100%27/%3E%3Ctext%20x%3D%2750%27%20y%3D%2765%27%20font-size%3D%2760%27%20text-anchor%3D%27middle%27%20fill%3D%27white%27%20font-family%3D%27Arial%2C%20sans-serif%27%3EHN%3C/text%3E%3C/svg%3E" />
+
 <meta content="68-year-old Susan Smith lost 47 pounds without giving up pasta using this simple morning Alpine Ice Ritual. Discover her transformation story." name="description"/>
 <meta content="weight loss, alpine ice ritual, metabolism, transformation story, natural weight loss" name="keywords"/>
 <meta content="Alpine Ice Ritual - Lost 47 lbs in 6 Months" property="og:title"/>
