Use hosted doctor imagery on gut quiz

--- a/gutquizlp1/index.html
+++ b/gutquizlp1/index.html
@@ -251,6 +251,14 @@
       margin-bottom: 24px;
     }
 
+    .intro-illustration {
+      display: block;
+      width: clamp(200px, 48vw, 280px);
+      margin: 0 auto 24px;
+      border-radius: 24px;
+      box-shadow: 0 24px 48px rgba(30, 74, 76, 0.16);
+    }
+
     .expert {
       margin-top: 48px;
       display: grid;
@@ -362,6 +370,12 @@
         <h1>Do You Qualify to Watch the Harvard-Backed Gut Health Video?</h1>
         <p class="subheadline">Answer a few quick questions to see if your symptoms match those helped by this simple 8-second morning ritual.</p>
         <p class="body-copy">This short quiz helps determine if your digestive type qualifies for early access to the breakthrough Harvard-backed gut health video presentation.</p>
+        <img
+          class="intro-illustration"
+          src="https://yourdomain.com/assets/doctor.png"
+          alt="Dr. Scott reviewing digestive health notes"
+          loading="lazy"
+        />
         <button class="button-primary" data-next>
           Start Quiz →
         </button>
@@ -445,7 +459,11 @@
         <a class="button-primary" href="https://your-vsl-link-here.com">Continue to Video →</a>
 
         <div class="expert">
-          <img src="https://yourdomain.com/assets/professor.png" alt="Dr. Anthony Scott" loading="lazy" />
+          <img
+            src="https://yourdomain.com/assets/doctor1.png"
+            alt="Dr. Anthony Scott"
+            loading="lazy"
+          />
           <div>
             <h3>Dr. Anthony Scott</h3>
             <p>Dr. Anthony Scott is a Harvard-trained medical researcher specializing in gut and liver health. His work on the gut-liver axis has helped thousands achieve smooth digestion through natural daily rituals.</p>
