--- a/gutquizlp1/index.html
+++ b/gutquizlp1/index.html
@@ -181,64 +181,67 @@
 
     .answers {
       display: grid;
-      gap: 14px;
-      margin-bottom: 24px;
+      gap: 16px;
+      margin-bottom: 20px;
     }
 
     .answer {
+      position: relative;
       border: 1.5px solid var(--border);
-      border-radius: 16px;
-      padding: 18px 20px;
+      border-radius: 18px;
+      padding: 18px 22px;
       font-size: 17px;
       font-weight: 600;
       color: var(--text-mid);
       background: #f8fcfb;
       cursor: pointer;
-      transition: border 200ms ease, box-shadow 200ms ease, background 200ms ease;
+      transition: border 220ms ease, box-shadow 220ms ease, background 220ms ease, transform 220ms ease;
       display: flex;
       align-items: center;
-      gap: 12px;
+      gap: 14px;
+    }
+
+    .answer::after {
+      content: "";
+      position: absolute;
+      right: 18px;
+      top: 50%;
+      width: 10px;
+      height: 10px;
+      border-right: 2px solid var(--accent);
+      border-bottom: 2px solid var(--accent);
+      transform: translateY(-50%) rotate(-45deg);
+      opacity: 0;
+      transition: opacity 200ms ease;
     }
 
     .answer input {
       accent-color: var(--accent);
-      transform: scale(1.2);
+      transform: scale(1.15);
     }
 
     .answer:hover {
       border-color: var(--accent);
       box-shadow: 0 18px 40px rgba(42, 161, 152, 0.18);
       background: #ffffff;
+      transform: translateY(-2px);
+    }
+
+    .answer:focus-within {
+      border-color: var(--accent);
+      box-shadow: 0 18px 40px rgba(42, 161, 152, 0.2);
+      background: #ffffff;
     }
 
     .answer.selected {
       border-color: var(--accent);
-      background: rgba(42, 161, 152, 0.08);
+      background: rgba(42, 161, 152, 0.1);
       color: var(--text-dark);
+      box-shadow: 0 22px 44px rgba(42, 161, 152, 0.18);
     }
 
-    .nav-buttons {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      gap: 16px;
-    }
-
-    .back-button {
-      background: transparent;
-      border: none;
-      color: var(--text-mid);
-      font-size: 15px;
-      font-weight: 600;
-      cursor: pointer;
-      display: inline-flex;
-      align-items: center;
-      gap: 10px;
-      transition: color 200ms ease;
-    }
-
-    .back-button:hover {
-      color: var(--accent-dark);
+    .answer.selected::after {
+      opacity: 1;
     }
 
     .results {
@@ -257,6 +260,33 @@
       margin: 0 auto 24px;
       border-radius: 24px;
       box-shadow: 0 24px 48px rgba(30, 74, 76, 0.16);
+    }
+
+    .cta-image {
+      display: block;
+      margin: 24px auto 32px;
+      max-width: clamp(220px, 60vw, 360px);
+      border-radius: 24px;
+      overflow: hidden;
+      box-shadow: 0 28px 56px rgba(30, 74, 76, 0.18);
+      transition: transform 220ms ease, box-shadow 220ms ease;
+    }
+
+    .cta-image img {
+      width: 100%;
+      display: block;
+      height: auto;
+    }
+
+    .cta-image:hover,
+    .cta-image:focus {
+      transform: translateY(-4px);
+      box-shadow: 0 34px 64px rgba(30, 74, 76, 0.24);
+    }
+
+    .cta-image:focus-visible {
+      outline: 3px solid var(--accent);
+      outline-offset: 6px;
     }
 
     .expert {
@@ -336,9 +366,13 @@
     }
 
     @media (max-width: 640px) {
+      .page {
+        padding: 24px 14px 60px;
+      }
+
       .quiz-card {
         border-radius: 20px;
-        padding: 32px 20px 36px;
+        padding: 28px 18px 32px;
       }
 
       .expert {
@@ -348,6 +382,26 @@
 
       .expert img {
         margin: 0 auto;
+      }
+
+      .answers {
+        gap: 12px;
+        margin-bottom: 16px;
+      }
+
+      .answer {
+        font-size: 16px;
+        padding: 16px 18px;
+      }
+
+      h1,
+      .question-title {
+        font-size: clamp(24px, 7vw, 32px);
+      }
+
+      .subheadline,
+      .body-copy {
+        font-size: clamp(16px, 4vw, 19px);
       }
     }
   </style>
@@ -390,10 +444,6 @@
           <label class="answer"><input type="radio" name="q1" value="Occasionally" />Occasionally</label>
           <label class="answer"><input type="radio" name="q1" value="Rarely" />Rarely</label>
         </div>
-        <div class="nav-buttons">
-          <button class="back-button" data-prev>← Back</button>
-          <button class="button-primary" data-next disabled>Next →</button>
-        </div>
       </section>
 
       <section class="quiz-step" data-step="2" aria-live="polite">
@@ -403,10 +453,6 @@
           <label class="answer"><input type="radio" name="q2" value="Less than 6 months" />Less than 6 months</label>
           <label class="answer"><input type="radio" name="q2" value="1–2 years" />1–2 years</label>
           <label class="answer"><input type="radio" name="q2" value="3+ years" />3+ years</label>
-        </div>
-        <div class="nav-buttons">
-          <button class="back-button" data-prev>← Back</button>
-          <button class="button-primary" data-next disabled>Next →</button>
         </div>
       </section>
 
@@ -418,10 +464,6 @@
           <label class="answer"><input type="radio" name="q3" value="Yes, and they worked" />Yes, and they worked</label>
           <label class="answer"><input type="radio" name="q3" value="Not yet" />Not yet</label>
         </div>
-        <div class="nav-buttons">
-          <button class="back-button" data-prev>← Back</button>
-          <button class="button-primary" data-next disabled>Next →</button>
-        </div>
       </section>
 
       <section class="quiz-step" data-step="4" aria-live="polite">
@@ -431,10 +473,6 @@
           <label class="answer"><input type="radio" name="q4" value="Almost always" />Almost always</label>
           <label class="answer"><input type="radio" name="q4" value="Sometimes" />Sometimes</label>
           <label class="answer"><input type="radio" name="q4" value="Rarely" />Rarely</label>
-        </div>
-        <div class="nav-buttons">
-          <button class="back-button" data-prev>← Back</button>
-          <button class="button-primary" data-next disabled>Next →</button>
         </div>
       </section>
 
@@ -446,16 +484,15 @@
           <label class="answer"><input type="radio" name="q5" value="Maybe" />Maybe</label>
           <label class="answer"><input type="radio" name="q5" value="Not really" />Not really</label>
         </div>
-        <div class="nav-buttons">
-          <button class="back-button" data-prev>← Back</button>
-          <button class="button-primary" data-next disabled>See Results →</button>
-        </div>
       </section>
 
       <section class="quiz-step results" data-step="6" aria-live="polite">
         <div class="eyebrow">Great News</div>
         <h2>You Qualify to Watch the Video</h2>
         <p>Based on your answers, your digestion type matches those who benefited most from the Harvard-backed 8-second warm water protocol. This private video explains how a simple morning ritual can help clear buildup, ease bloating, and restore gut balance naturally.</p>
+        <a class="cta-image" href="https://your-vsl-link-here.com" aria-label="Continue to the Harvard-backed gut health video">
+          <img src="doctor.png" alt="Tap to continue to the Harvard-backed gut health video" loading="lazy" />
+        </a>
         <a class="button-primary" href="https://your-vsl-link-here.com">Continue to Video →</a>
 
         <div class="expert">
@@ -501,20 +538,12 @@
     }
 
     function showStep(index) {
+      const boundedIndex = Math.max(0, Math.min(index, steps.length - 1));
       steps[currentStep].classList.remove('active');
-      currentStep = index;
+      currentStep = boundedIndex;
       steps[currentStep].classList.add('active');
-      const nextButton = steps[currentStep].querySelector('[data-next]');
-      if (nextButton) {
-        const requiresAnswer = currentStep > 0 && currentStep <= totalQuestions;
-        if (requiresAnswer) {
-          const selected = steps[currentStep].querySelector('input[type="radio"]:checked');
-          nextButton.disabled = !selected;
-        } else {
-          nextButton.disabled = false;
-        }
-      }
       updateProgress();
+      steps[currentStep].scrollIntoView({ behavior: 'smooth', block: 'start' });
     }
 
     document.querySelectorAll('[data-next]').forEach(button => {
@@ -522,26 +551,8 @@
         const stepElement = button.closest('.quiz-step');
         const stepIndex = steps.indexOf(stepElement);
 
-        if (stepIndex >= 1 && stepIndex <= totalQuestions) {
-          const inputs = stepElement.querySelectorAll('input[type="radio"]');
-          const selected = Array.from(inputs).some(input => input.checked);
-          if (!selected) {
-            return;
-          }
-        }
-
         if (stepIndex < steps.length - 1) {
           showStep(stepIndex + 1);
-        }
-      });
-    });
-
-    document.querySelectorAll('[data-prev]').forEach(button => {
-      button.addEventListener('click', () => {
-        const stepElement = button.closest('.quiz-step');
-        const stepIndex = steps.indexOf(stepElement);
-        if (stepIndex > 0) {
-          showStep(stepIndex - 1);
         }
       });
     });
@@ -555,14 +566,13 @@
             answer.classList.toggle('selected', answer.contains(target));
           });
           const stepElement = group.closest('.quiz-step');
-          const nextButton = stepElement.querySelector('[data-next]');
-          if (nextButton) {
-            nextButton.disabled = false;
-            const stepIndex = steps.indexOf(stepElement);
-            if (stepIndex !== -1 && stepIndex < steps.length - 1) {
+          const stepIndex = steps.indexOf(stepElement);
+          if (stepIndex !== -1) {
+            const nextIndex = Math.min(stepIndex + 1, steps.length - 1);
+            if (nextIndex !== stepIndex) {
               setTimeout(() => {
                 if (steps[currentStep] === stepElement) {
-                  showStep(stepIndex + 1);
+                  showStep(nextIndex);
                 }
               }, autoAdvanceDelay);
             }
