Add dimensions to CTA image

--- a/gutquizlp1/index.html
+++ b/gutquizlp1/index.html
@@ -562,7 +562,13 @@
         <h2>You Qualify to Watch the Video</h2>
         <p>Based on your answers, your digestion type matches those who benefited most from the Harvard-backed 8-second warm water protocol. This private video explains how a simple morning ritual can help clear buildup, ease bloating, and restore gut balance naturally.</p>
         <a class="cta-image" href="https://your-vsl-link-here.com" aria-label="Continue to the Harvard-backed gut health video">
-          <img src="doctor.png" alt="Tap to continue to the Harvard-backed gut health video" loading="lazy" />
+          <img
+            src="doctor.png"
+            alt="Tap to continue to the Harvard-backed gut health video"
+            loading="lazy"
+            width="2090"
+            height="1176"
+          />
         </a>
         <a class="button-primary" href="https://your-vsl-link-here.com">Continue to Video →</a>
 
