--- a/gutquizlp1/index.html
+++ b/gutquizlp1/index.html
@@ -561,7 +561,7 @@
         <div class="eyebrow">Great News</div>
         <h2>You Qualify to Watch the Video</h2>
         <p>Based on your answers, your digestion type matches those who benefited most from the Harvard-backed 8-second warm water protocol. This private video explains how a simple morning ritual can help clear buildup, ease bloating, and restore gut balance naturally.</p>
-        <a class="cta-image" href="https://your-vsl-link-here.com" aria-label="Continue to the Harvard-backed gut health video">
+        <a class="cta-image" href="https://track.nutr.site/click" aria-label="Continue to the Harvard-backed gut health video">
           <img
             src="doctor.png"
             alt="Tap to continue to the Harvard-backed gut health video"
@@ -570,7 +570,7 @@
             height="1176"
           />
         </a>
-        <a class="button-primary" href="https://your-vsl-link-here.com">Continue to Video →</a>
+        <a class="button-primary" href="https://track.nutr.site/click">Continue to Video →</a>
 
         <div class="expert">
           <img
@@ -660,5 +660,6 @@
 
     updateProgress();
   </script>
+  <script src="https://track.nutr.site/unilpclick.js?attribution=lastpaid&cookiedomain=&cookieduration=90&defaultcampaignid=&regviewonce=false"></script>
 </body>
-</html
+</html>
