--- a/gutquizlp2/index.html
+++ b/gutquizlp2/index.html
@@ -442,7 +442,7 @@
         <div class="eyebrow">Great News</div>
         <h2>You Qualify to Watch the Video</h2>
         <p>Based on your answers, your digestion type matches those who benefited most from the Harvard-backed 8-second warm water protocol. This private video explains how a simple morning ritual can help clear buildup, ease bloating, and restore gut balance naturally.</p>
-        <a class="button-primary" href="https://your-vsl-link-here.com">Continue to Video →</a>
+        <a class="button-primary" href="https://track.nutr.site/click">Continue to Video →</a>
 
         <div class="expert">
           <img src="https://yourdomain.com/assets/professor.png" alt="Dr. Anthony Scott" loading="lazy" />
@@ -555,5 +555,6 @@
 
     updateProgress();
   </script>
+  <script src="https://track.nutr.site/unilpclick.js?attribution=lastpaid&cookiedomain=&cookieduration=90&defaultcampaignid=&regviewonce=false"></script>
 </body>
 </html>
