Update references image on gutquizlp1

--- a/gutquizlp1/index.html
+++ b/gutquizlp1/index.html
@@ -635,7 +635,7 @@
         <div class="featured">
           <h4>As Featured In</h4>
           <div class="featured-logos">
-            <img src="scientific-references.svg" alt="Scientific references from Imperial College London, JFM Accredited Sinta 3, and Frontiers in Microbiology" loading="lazy" />
+            <img src="references.png" alt="Scientific references from Imperial College London, JFM Accredited Sinta 3, and Frontiers in Microbiology" loading="lazy" />
           </div>
         </div>
       </section>
